--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -16,6 +16,24 @@
     weight = 10
     url = "/about"
 
+[[main]]
+    name = "Experience"
+    pageRef = "page"
+    weight = 20
+    url = "/jobs"
+
+[[main]]
+    name = "Education"
+    pageRef = "page"
+    weight = 30
+    url = "/education"
+
+[[main]]
+    name = "Publications"
+    pageRef = "page"
+    weight = 40
+    url = "/publications"
+
 #[[main]]
 #  name = "Blog"
 #  pageRef = "posts"
