--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -65,7 +65,8 @@ enableCodeCopy = true
   showAuthorsBadges = false 
   showWordCount = true
   showSummary = true
-  sharingLinks = [ "linkedin", "twitter", "reddit", "pinterest", "facebook", "email"]
+  #sharingLinks = [ "linkedin", "mastidonb", "reddit", "pinterest", "facebook", "email"]
+  sharingLinks = []
 
 [list]
   #showHero = true
