updated bio param

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -16,7 +16,7 @@ dateFormat = "2 January 2006"
   name = "Pierdomenico Fiadino, PhD"
   #image = "img/pf_square.png"
   headline = "Data Analytics & Decision Science leader @ Bitpanda"
-  bio = "test test test"
+  bio = "data stuff since 2010"
   links = [
      { email = "mailto:p@fiadino.org" },
   #   { link = "https://link-to-some-website.com/" },
