--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -5,7 +5,7 @@ isoCode = "en"
 weight = 1
 rtl = false
 
-title = "P. Fiadino's home page"
+title = "Piero's home page"
 # logo = "img/logo.png"
 description = "Resume and contacts"
 copyright = "©2023 All Rights Reserved"
