--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -6,7 +6,7 @@ weight = 1
 rtl = false
 
 title = "Piero's home page"
-# logo = "img/logo.png"
+logo = "img/r2d2_xs.png"
 description = "Resume and contacts"
 copyright = "©2023 All Rights Reserved"
 
