--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -53,7 +53,7 @@ defaultBackgroundImage = "img/background.jpg" # used as default for background i
   showBreadcrumbs = true
   showDraftLabel = true
   showEdit = true
-  editURL = "https://github.com/pierdom/pierdom.github.io/"
+  editURL = "https://github.com/pierdom/pierdom.github.io/blob/master/content"
   editAppendPath = true
   seriesOpened = false
   showHeadingAnchors = true
